--- a/src/editview/Cargo.toml
+++ b/src/editview/Cargo.toml
@@ -35,7 +35,6 @@ parking_lot = "0.9"
 serde = { version="1", features = ["derive"] }
 serde_json = "1"
 syntect = "3"
-tau-linecache = { path="../tau-linecache" }
 tokio = "0.1"
 unicode-segmentation = "1"
-xrl = "0.0.8"
+xrl = { git="https://github.com/c4eater/xrl", branch="hashmap" }
