--- a/src/tau/Cargo.toml
+++ b/src/tau/Cargo.toml
@@ -43,7 +43,7 @@ serde = { version="1", features = ["derive"] }
 serde_json = "1"
 syntect = "3"
 tokio = "0.1"
-xrl = "0.0.8"
+xrl = { git="https://github.com/c4eater/xrl", branch="hashmap" }
 
 # Optional deps
 libhandy = { version = "0.4", optional = true }
