--- a/src/editview/Cargo.toml
+++ b/src/editview/Cargo.toml
@@ -19,9 +19,9 @@ gtk_v3_22 = ["gtk/v3_22"]
 
 [dependencies]
 cairo-rs = ""
-crossbeam-channel = "0.3"
+crossbeam-channel = "0.4"
 enclose = "1"
-futures = "0.1"
+futures = { version="0.3", features=["compat"] }
 gdk = ""
 gettext-rs = { version="0.4", features=["gettext-system"] }
 gio = ""
@@ -30,11 +30,11 @@ gtk = { version="0.8", features = ["v3_20"] }
 log = "0.4"
 pango = { version="0.8", features = ["v1_38"] }
 pangocairo = ""
-parking_lot = "0.9"
+parking_lot = "0.10"
 serde = { version="", features = ["derive"] }
 serde_json = ""
 syntect = ""
 tau-linecache = { path="../tau-linecache" }
-tokio = "0.1"
+tokio = "0.2"
 unicode-segmentation = "1"
 xrl = "0.0.8"
