--- a/src/tau/Cargo.toml
+++ b/src/tau/Cargo.toml
@@ -21,12 +21,13 @@ handy = ["libhandy", "gtk_v3_22"]
 [dependencies]
 cairo-rs = ""
 chrono = "0.4"
-crossbeam-channel = "0.3"
+crossbeam-channel = "0.4"
 dirs = "2"
 editview = { path="../editview" }
 enclose = "1"
 env_logger = "0.7"
-futures = "0.1"
+futures = { version="0.3", features=["compat"] }
+futures-util = "0.3"
 gdk = ""
 gdk-pixbuf = ""
 gettext-rs = { version="0.4", features=["gettext-system"] }
@@ -37,13 +38,13 @@ human-panic = "1"
 log = "0.4"
 pango = ""
 pangocairo = ""
-parking_lot = "0.9"
+parking_lot = "0.10"
 serde = { version="1", features = ["derive"] }
 serde_json = "1"
 syntect = "3"
-tokio = "0.1"
+tokio = { version="0.2", features=["rt-core"] }
 
 xrl = "0.0.8"
 
 # Optional deps
-libhandy = { git="https://gitlab.gnome.org/World/Rust/libhandy-rs.git", version = "0.4", optional = true }
+libhandy = { git="https://gitlab.gnome.org/World/Rust/libhandy-rs.git", version = "0.5", optional = true }
