--- a/src/editview/Cargo.toml
+++ b/src/editview/Cargo.toml
@@ -13,19 +13,19 @@ readme = "README.md"
 build = "build.rs"
 
 [dependencies]
-cairo-rs = ""
+cairo-rs = "0.8"
 crossbeam-channel = "0.4"
-gdk = ""
+gdk = "0.12"
 gettext-rs = { version="0.4", features=["gettext-system"] }
-gio = ""
-glib = ""
+gio = "0.8"
+glib = "0.9"
 gtk = { version="0.8", features = ["v3_22"] }
 log = "0.4"
 pango = { version="0.8", features = ["v1_38"] }
-pangocairo = ""
+pangocairo = "0.9"
 parking_lot = "0.10"
-serde = { version="", features = ["derive"] }
-serde_json = ""
+serde = { version="1", features = ["derive"] }
+serde_json = "1"
 syntect = "3"
 tau-linecache = { path="../tau-linecache" }
 tau-rpc = { path="../tau-rpc" }
